yamls/AKS/ingress/nginx-ingress-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld
  namespace: dev
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld
