yamls/AKS/ingress/nginx-ingress-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-helloworld
  namespace: dev
spec:
  ingressClassName: nginx-internal
  rules:
  - host: hello.test.bpinheiro.com
    http:
      paths:
      - backend:
          service:
            name: aks-helloworld
            port:
              number: 80
        path: /
        pathType: Prefix
